--- a/test/Exceptional/Exceptional.Test.csproj
+++ b/test/Exceptional/Exceptional.Test.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ExceptionManager\ExceptionManager.csproj" />
+    <ProjectReference Include="..\..\src\Exceptional\Exceptional.csproj" />
   </ItemGroup>
 
 </Project>
