--- a/test/Exceptional/Exceptional.Test.csproj
+++ b/test/Exceptional/Exceptional.Test.csproj
@@ -1,18 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net4.6</TargetFramework>
+    <TargetFramework>net451</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Properties\" />
-    <Folder Include="Properties\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoFixture.AutoRhinoMocks" Version="3.50.2" />
-    <PackageReference Include="dotnet-test-nunit" Version="3.4.0-beta-3" />
+
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+   
     <PackageReference Include="NUnit" Version="3.6.1" />
+    
+    <PackageReference Include="AutoFixture.AutoRhinoMocks" Version="3.50.2" />
+    
+    <PackageReference Include="NUnit3TestAdapter" Version="3.7.0" />
     <PackageReference Include="RhinoMocks" Version="3.6.1" />
   </ItemGroup>
 
@@ -20,4 +24,12 @@
     <ProjectReference Include="..\..\src\Exceptional\Exceptional.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+  </ItemGroup>
+  
+  <PropertyGroup>
+    <!--<TestRunner>nunit</TestRunner>-->
+  </PropertyGroup>
+  
 </Project>
