--- a/test/Exceptional.Test/Exceptional.Test.csproj
+++ b/test/Exceptional.Test/Exceptional.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net451</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <SignAssembly>False</SignAssembly>
   </PropertyGroup>
 
@@ -14,7 +14,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="NUnit" Version="3.7.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.8.0-alpha1" />
-    <PackageReference Include="RhinoMocks" Version="3.6.1" />
+    <!--<PackageReference Include="RhinoMocks" Version="3.6.1" />-->
   </ItemGroup>
 
   <ItemGroup>
