--- a/test/Exceptional.Test/Exceptional.Test.csproj
+++ b/test/Exceptional.Test/Exceptional.Test.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
     <!--<PackageReference Include="Microsoft.CodeCoverage" Version="1.0.3" />-->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Moq" Version="4.7.145" />
     <PackageReference Include="NUnit" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
   </ItemGroup>
