Updated the project files to get the ci code coverage running;

--- a/src/ExceptionShield/ExceptionShield.csproj
+++ b/src/ExceptionShield/ExceptionShield.csproj
@@ -13,7 +13,7 @@
     <PackageProjectUrl>https://github.com/MatthiasJansen/ExceptionShield</PackageProjectUrl>
     <RepositoryUrl>https://github.com/MatthiasJansen/ExceptionShield</RepositoryUrl>
     <PackageTags>manager handler exception policy shield exceptional</PackageTags>
-    
+    <DebugType>Full</DebugType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
