Improved test coverage;

--- a/test/ExceptionShield.Test/ExceptionShield.Test.csproj
+++ b/test/ExceptionShield.Test/ExceptionShield.Test.csproj
@@ -15,6 +15,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="TestResults\**" />
+    <EmbeddedResource Remove="TestResults\**" />
+    <None Remove="TestResults\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
 
