Loosened the type restrictions for the policy groups;

--- a/src/ExceptionShield/ExceptionShield.csproj
+++ b/src/ExceptionShield/ExceptionShield.csproj
@@ -18,6 +18,7 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     <RuntimeFrameworkVersion>2.0.6</RuntimeFrameworkVersion>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
